--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ highlighter: pygments
 # so be sure to set them if your theme uses them.
 #
 title : Jekyll Bootstrap
-tagline: Site Tagline
+tagline: SciRuby
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
+  name : Lokesh Sharma
+  email : lokeshhsharma@gmail.com
+  github : lokeshh
   twitter : username
   feedburner : feedname
 
