--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,8 @@
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-kramdown:
-    input: GFM
-    syntax_highlighter: rouge
+markdown: kramdown
+highlighter: rouge
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
